--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ library("LMWiRe")
 [![R-CMD-check](https://github.com/ManonMartin/LMWiRe/actions/workflows/check-standard.yaml/badge.svg)](https://github.com/ManonMartin/LMWiRe/actions/workflows/check-standard.yaml)
 <!-- badges: end -->
 
-# Disclaimer /!\ 
+# Disclaimer /!\\ 
 
 This package has been renamed as limpca (manonmartin.github.io/limpca/). LMWiRe is no further maintained nor improved.
 
